--- a/index.html
+++ b/index.html
@@ -1,26 +1,32 @@
 <!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    
+    <title>VeriFund | Transparent NGO Fund Utilization Tracker</title>
+    <meta name="title" content="VeriFund | Transparent NGO Fund Utilization Tracker" />
+    <meta name="description" content="A blockchain-inspired platform ensuring transparency and accountability in NGO spending through milestone-based fund release." />
+    <meta name="author" content="VeriFund Engineering Team" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://your-deployment-url.vercel.app/" />
+    <meta property="og:title" content="VeriFund | Every Dollar Accounted For" />
+    <meta property="og:description" content="Bridging the trust gap between donors and NGOs with verifiable impact milestones and real-time fund tracking." />
+    <meta property="og:image" content="/og-image.png" /> <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://your-deployment-url.vercel.app/" />
+    <meta name="twitter:title" content="VeriFund | Transparent NGO Tracker" />
+    <meta name="twitter:description" content="Real-time transparency for social impact. See exactly how your donations are being spent." />
+    <meta name="twitter:image" content="/og-image.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
 
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
   </body>
 </html>
